# EthereumArbitrageTool

./: .env.example  .gitignore  .replit  API_SETUP_GUIDE.md  Cargo.toml  LINUX_SETUP.md  MAINNET_DEPLOYMENT_GUIDE.md  QUICKSTART.md  README-mainnet.md  README.md  hardhat.config.js  mainnet-deployment.json  package-lock.json  package.json  replit.md
artifacts/contracts/FlashLoanArbitrage.sol/: FlashLoanArbitrage.json  ILendingPool.json  ISushiSwapRouter.json  IUniswapV2Router.dbg.json  (+1 more)
attached_assets/: Pasted--Finished-dev-profile-unoptimized-debuginfo-target-s-in-0-10s-Running-target-debug-e-1750968991379_1750968991379.txt  Pasted-0x6080604052600436101561001257600080fd5b6000803560e01c806324e262411461108c578063277754ed1461105d5780-1750971472742_1750971472744.txt  Pasted-2025-06-26T20-40-02Z-INFO-ethereum-flashloan-arbitrage-bot-No-profitable-opportunities-found-2-1750970507918_1750970507919.txt  Pasted-New-chat-Today-Ethereum-Flashloan-Arbitraj-Bot-Karl-l-k-Analizi-Get-App-Ethereum-Flashloan-Arbitraj-1750954636959_1750954636960.txt  Pasted-pragma-solidity-0-6-6-Import-Libraries-Migrator-Exchange-Factory-import-github-com-U-1750971158994_1750971158995.txt
cache/: solidity-files-cache.json
contracts/: FlashLoanArbitrage.sol  FlashLoanArbitrageMainnet.sol
contracts/interfaces/: IFlashLoanReceiver.sol
docs/: PRODUCTION_NOTES.md  RBUILDER_SETUP.md  mainnet-deployment-guide.md
scripts/: check-api-setup.js  continuous-arbitrage.js  deploy-direct.js  deploy-mainnet.js  deploy.js  enhanced-ultra-bot.js  execute-small-capital.js  generate-production-keys.js  mev-boost-integration.js  monitor-profits.js  production-instant.js  production-real.js  setup-rbuilder-env.js  start-rbuilder.js  ultra-arbitrage-bot.js
src/: config.rs  main.rs
src/arbitrage/: detector.rs  executor.rs  mod.rs
src/dex/: balancer.rs  curve.rs  mod.rs  sushiswap.rs  uniswap.rs
src/flashloan/: aave.rs  mod.rs
src/utils/: gas.rs  logger.rs  mod.rs
(+7 files in other folders)
