[package]
name = "ethereum-flashloan-arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "1.0", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
url = "2.2"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
bigdecimal = { version = "0.2", features = ["serde"] }
num-bigint = "0.4"
hex = "0.4"
futures-util = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
