[package]
name = "ethereum-flashloan-arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }